--- a/RunForestRun/app/src/main/AndroidManifest.xml
+++ b/RunForestRun/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="android.permission.VIBRATE"/>
+    <uses-permission android:name="android.permission.CAMERA"/>
 
     <uses-feature android:name="com.google.android.maps"/>
     <uses-feature android:name="android.hardware.location.gps"/>
@@ -36,6 +37,12 @@
         </activity>
         <activity android:name=".MapActivity"/>
         <activity android:name=".TimeDB"/>
+
+        <receiver android:name=".ProximityIntentReceiver">
+            <intent-filter>
+                <action android:name="com.etfos.bpeserovic.ENTERING_AREA"/>
+            </intent-filter>
+        </receiver>
 
 
     </application>
